--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: roulette6.github.io
-description: Test website using GitHub pages
+title: roulette6 (J Martinez)
+description: A network engineer with a proclivity for programming
 google_analytics: 
 show_downloads: true
 theme: jekyll-theme-midnight
